--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
     "name": "gulp-scss-starter",
     "description": "Frontend development with pleasure",
-    "author": "Andrey Gorokhov",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/andreyalexeich/gulp-scss-starter.git"
-    },
+    "author": "Alex",
+    "repository": "https://github.com/andreyalexeich/gulp-scss-starter.git",
     "license": "MIT",
     "scripts": {
         "dev": "gulp",
@@ -64,6 +61,9 @@
         "yargs": "^12.0.5"
     },
     "dependencies": {
+        "bootstrap": "^4.3.1",
         "smart-grid": "^2.1.2"
-    }
+    },
+    "version": "1.0.0",
+    "main": "index.js"
 }
