--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "imagemin-webp": "^5.0.0",
         "imagemin-zopfli": "^6.0.0",
         "require-dir": "^1.2.0",
+        "smart-grid": "^2.1.2",
         "stylelint": "^10.0.1",
         "stylelint-order": "^3.0.0",
         "stylelint-selector-bem-pattern": "^2.1.0",
@@ -61,8 +62,7 @@
         "yargs": "^12.0.5"
     },
     "dependencies": {
-        "bootstrap": "^4.3.1",
-        "smart-grid": "^2.1.2"
+        "bootstrap": "^4.3.1"
     },
     "version": "1.0.0",
     "main": "index.js"
